--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,15 @@
 librosa==0.6.3
 numpy
 pandas
+requests
+time
+os
+json
+pickle
+soundfile
+wave
+pydub
+emotion-recognition
 soundfile==0.9.0
 wave
 scikit-learn==0.24.2
